2009-07-08  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-06-10  Jesse Jones  <jesjones@mindspring.com>

	* DecorateThreadsRule.cs, ThreadModel.cs, ThreadRocks.cs, 
	Makefile.am: added new rule.

2009-01-23  Jesse Jones  <jesjones@mindspring.com>

	* DoNotUseThreadStaticWithInstanceFieldsRule.cs, Makefile.am: 
	added new rule.

2009-01-22  Stephane Delcroix  <sdelcroix@novell.com>

	* Makefile.am: removing references that slipped in by mistake.

2009-01-21  Jesse Jones  <jesjones@mindspring.com>

	* WriteStaticFieldFromInstanceMethodRule.cs: Ignore fields
	decorated with [ThreadStatic].

2008-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* ProtectCallToEventDelegatesRule.cs: Deal with (null != variable)
	just like we did with (variable != null).

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* NonConstantStaticFieldsShouldNotBeVisibleRule.cs: Use HasFields

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ProtectCallToEventDelegatesRule.cs: Change documentation comments
	to make it clear that this does not solve all potential problems
	wrt executing events while they are (possibly) being removed.

2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* ProtectCallToEventDelegatesRule.cs: New. Rule that checks if calls
	to event delegates are null-protected and without a race condition.
	* Makefile.am: Added the new rule and tests to the build.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Concurrency.mdp:
	* Gendarme.Rules.Concurrency.csproj: Activate makefile integration for
	all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-10-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotUseMethodImplOptionsSynchronizedRule.cs: New. Rule to warn 
	about method decorated with [MethodImpl(MethodImplOptions.Synchronized)]
	since the runtime lock is similar to a lock(this) or lock(typeof(X))