@@ -1,3 +1,8 @@
+2009-08-25  Jesse Jones  <jesjones@mindspring.com>
+
+	* DontUseLockedRegionOutsideMethodRule.cs: Edited 
+	the description.
+
 2009-07-08  Jesse Jones  <jesjones@mindspring.com>
 
 	* *Rule.cs: Edited most of the rule descriptions.
